user side swagger documentation refracted and all its functionalities refracted
